--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,10 @@ jobs:
     working_directory: /go/src/github.com/sydy_ci
     steps:
     - checkout
-    - run:
-        name: Get all dependencies
-        command: |
-          go get -v ./...
-          go get -u github.com/onsi/ginkgo/ginkgo
-          go get -u github.com/onsi/gomega/...
-    - run:
-        name: Test everything
-        command: ginkgo -r -race -failFast -progress
-    - setup_remote_docker:
-        docker_layer_caching: true
+    - run: echo "checkouut"
+        
+    - run: echo "test"
+    
     - run: echo "A first hello"
 
 
