--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,5 @@ jobs:
             name: build and push Docker images
             shell: /bin/bash
             command: |
-              chmod +x ../build.sh
-              ../build.sh
+              chmod +x build.sh
+              build.sh
