--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,5 @@ jobs:
             name: build and push Docker images
             shell: /bin/bash
             command: |
-              chmod +x ../build.sh
+              chmod 777 ../build.sh
               ../build.sh
